<resources>
    <string name="app_name">CoronaProject</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="country_name">Country name</string>
    <string name="confirmed_cases">Confirmed cases</string>
    <string name="all_countries">All countries</string>
    <string name="watched_countries">Watched countries</string>
    <string name="image_view">image view</string>
    <string name="number_of_confirmed_cases">Number of Confirmed cases</string>
    <string name="number_of_deaths_cases">Number of Deaths cases</string>
    <string name="number_of_incident_rate_cases">Number of Incident rate cases</string>
    <string name="number_of_mortality_rate_cases">Number of Mortality rate cases</string>
    <string name="country_code">Country code</string>
    <string name="latitude">Latitude</string>
    <string name="last_updated">Last updated</string>
    <string name="add">Add</string>
    <string name="longitude">Longitude</string>
    <string name="delete">delete</string>
</resources>