<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".screens.details.CountryDetailsFragment">

    <TextView
        android:id="@+id/tv_countryName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="1dp"
        tools:text="@string/country_name"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_countryName">

        <TextView
            android:id="@+id/tv_confirmedCases"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:textSize="15sp"
            android:text="@string/number_of_confirmed_cases" />

        <TextView
            android:id="@+id/tv_deathCases"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/number_of_deaths_cases" />

        <TextView
            android:id="@+id/tv_incidentCases"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/number_of_incident_rate_cases" />

        <TextView
            android:id="@+id/tv_mortalityCases"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/number_of_mortality_rate_cases" />

        <TextView
            android:id="@+id/tv_countryCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/country_code" />

        <TextView
            android:id="@+id/tv_latitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/latitude" />

        <TextView
            android:id="@+id/tv_long"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/longitude" />

        <TextView
            android:id="@+id/tv_lastUpdated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/last_updated" />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add" />
        <Button
            android:id="@+id/btn_del"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center"
            android:text="@string/delete" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>