<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="vertical"
    app:cardCornerRadius="16dp"
    app:cardBackgroundColor="@color/beige">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_countryName"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingBottom="8dp"
            android:text="@string/country_name"
            android:textColor="#6D4C41"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_confirmedCases"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingBottom="8dp"
            android:text="@string/confirmed_cases"
            android:textColor="#6D4C41"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_lastUpdated"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingBottom="8dp"
            android:text="@string/last_updated"
            android:textColor="#6D4C41"
            android:textSize="16sp" />
    </LinearLayout>

</androidx.cardview.widget.CardView>